Revert "istio headers3"
This reverts commit 5f506a5419fa61295b68ef67384a718731df8483.

--- a/argocd/apps/recipes/vs.yaml
+++ b/argocd/apps/recipes/vs.yaml
@@ -8,10 +8,6 @@ spec:
   gateways:
   - istio-system/kube-gateway
   http:
-  - headers:
-    request:
-      set:
-        Host: "$request_host"
   - match:
     - uri:
         prefix: "/media"
@@ -20,6 +16,10 @@ spec:
         host: recipes
         port:
           number: 80
+      headers:
+              request:
+                set:
+                  Host: "$request_host"  # or use specific value like "recipes.yanello.net"
   - match:
     - uri:
         prefix: "/static"
@@ -28,6 +28,10 @@ spec:
         host: recipes
         port:
           number: 80
+      headers:
+              request:
+                set:
+                  Host: "$request_host"  # or use specific value like "recipes.yanello.net"
   - match:
     - uri:
         prefix: "/"
@@ -36,3 +40,7 @@ spec:
         host: recipes
         port:
           number: 8080
+      headers:
+              request:
+                set:
+                  Host: "$request_host"  # or use specific value like "recipes.yanello.net"
