--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -66,7 +66,7 @@ metadata:
   name: ntopng-vs
 spec:
   hosts:
-    - ntop.yanello.net
+    - ntopng.yanello.net
   gateways:
     - istio-system/kube-gateway
   http:
