--- a/argocd/apps/infra/istio/resources/authPol.yaml
+++ b/argocd/apps/infra/istio/resources/authPol.yaml
@@ -39,3 +39,8 @@ spec:
         - operation:
             hosts:
               - pikvm.yanello.net
+            ports:
+              - "80"
+              - "443"
+            methods:
+              ["GET", "POST", "PUT", "DELETE", "PATCH", "HEAD", "OPTIONS"]
