test auth pol24

--- a/argocd/apps/infra/istio/resources/authPol.yaml
+++ b/argocd/apps/infra/istio/resources/authPol.yaml
@@ -34,3 +34,11 @@ spec:
               - overseerr.yanello.net
               - immich.yanello.net
               - bitwarden.yanello.net
+---
+apiVersion: security.istio.io/v1beta1
+kind: AuthorizationPolicy
+metadata:
+  name: deny-all-policy
+  namespace: istio-system
+spec:
+  action: DENY
