--- a/argocd/apps/infra/istio/resources/authPol.yaml
+++ b/argocd/apps/infra/istio/resources/authPol.yaml
@@ -4,7 +4,7 @@ metadata:
   name: allow-domain-access-policy
   namespace: istio-system
 spec:
-  action: ALLOW
+  action: ALLOW # denied non-matching
   rules:
     # Allow all traffic from internal network (LAN)
     - from:
@@ -33,12 +33,3 @@ spec:
               - overseerr.yanello.net
               - immich.yanello.net
               - bitwarden.yanello.net
-# ---
-# apiVersion: security.istio.io/v1
-# kind: AuthorizationPolicy
-# metadata:
-#   name: allow-nothing
-# spec:
-#   action: DENY
-#   rules: 
-#     - {}
