--- a/argocd/apps/dev/tekton/tekton-pipelines-kustomize/values.yaml
+++ b/argocd/apps/dev/tekton/tekton-pipelines-kustomize/values.yaml
@@ -7,13 +7,13 @@ metadata:
     config.kubernetes.io/local-config: "true" # this says that we don't intend to actually deploy this configmap and just want to use it in argocd/kustomize
 data:
   resolverImage: 
-    ghcr.io/tektoncd/pipeline/resolvers-ff86b24f130c42b88983d3c13993056d:v0.64.0@sha256:9f7991b6de05c81de7181fb4f776226458c1545580a6b72e6c4c1865d94e5807
+    ghcr.io/tektoncd/pipeline/resolvers-ff86b24f130c42b88983d3c13993056d:v0.64.0
   webhookImage: 
-    1111111.dkr.ecr.us-east-1.amazonaws.com/ironbank/tektoncd/pipeline/cmd/webhook:v0.63.0@sha256:86bb5418a915ff7127e71babe5c182fdab86dd0c3527b66b073d95c17ca87273
+    1111111.dkr.ecr.us-east-1.amazonaws.com/ironbank/tektoncd/pipeline/cmd/webhook:v0.64.0
   controllerImage: 
-    1111111.dkr.ecr.us-east-1.amazonaws.com/ironbank/tektoncd/pipeline/cmd/controller:v0.63.0@sha256:4575e34a5aa27d571239136db2f28a757a773d2b8c18b176bef5facbe7081611
+    1111111.dkr.ecr.us-east-1.amazonaws.com/ironbank/tektoncd/pipeline/cmd/controller:v0.64.0
   eventsImage: 
-    1111111.dkr.ecr.us-east-1.amazonaws.com/tekton-releases/github.com/tektoncd/pipeline/cmd/events:v0.63.0@sha256:69465472f6dc25571bedf0453c5c505dd542a58a8631e580e8cd3517372174f9
+    1111111.dkr.ecr.us-east-1.amazonaws.com/tekton-releases/github.com/tektoncd/pipeline/cmd/events:v0.64.0
   # entryPointImage:
   #   1111111.dkr.ecr.us-east-1.amazonaws.com/ironbank/tektoncd/pipeline/cmd/entrypoint:v0.63.0@sha256:d2eca7694aa3b16c998811442eed5fec0c31f1f0bc5e53ba34d55b68e81b28a1
   # nopImage:
