use auto aw project

--- a/argocd/apps/archive-warrior/deploy.yaml
+++ b/argocd/apps/archive-warrior/deploy.yaml
@@ -30,6 +30,8 @@ spec:
         env:
         - name: DOWNLOADER
           value: mjy
+        - name: SELECTED_PROJECT
+          value: auto
         - name: CONCURRENT_ITEMS
           value: "5"
         - name: SHARED_RSYNC_THREADS
