--- a/argocd/apps/infra/kuma/deploy.yaml
+++ b/argocd/apps/infra/kuma/deploy.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - image: louislam/uptime-kuma:latest@sha256:431fee3be822b04861cf0e35daf4beef6b7cb37391c5f26c3ad6e12ce280fe18
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           name: kuma
           resources:
             limits:
