--- a/argocd/apps/media-server/prowlarr/deploy.yaml
+++ b/argocd/apps/media-server/prowlarr/deploy.yaml
@@ -35,7 +35,7 @@ spec:
             - name: TZ
               value: America/Chicago
           image: ghcr.io/hotio/prowlarr:latest@sha256:1648bcfae7e4ea067f6b1ae0de7bc2a2ee08b4f00d4b5704885b34b3a4734859
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           name: prowlarr
           ports:
             - containerPort: 9696
@@ -92,7 +92,7 @@ spec:
     spec:
       containers:
       - image: ghcr.io/flaresolverr/flaresolverr:latest@sha256:f104ee51e5124d83cf3be9b37480649355d223f7d8f9e453d0d5ef06c6e3b31b
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         name: flaresolverr
         ports:
           - containerPort: 8191
