--- a/argocd/apps/media-server/radarr/deploy.yaml
+++ b/argocd/apps/media-server/radarr/deploy.yaml
@@ -40,7 +40,7 @@ spec:
             - name: TZ
               value: America/Chicago
           image: linuxserver/radarr:latest@sha256:f4c9c64c42e84a3c03590afd9da2e420c69b5e936b4549778c5d4c00d907ba33
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           name: radarr
           resources:
             limits:
