--- a/argocd/apps/media-server/tautulli/deploy.yaml
+++ b/argocd/apps/media-server/tautulli/deploy.yaml
@@ -29,7 +29,7 @@ spec:
             - name: TZ
               value: America/Chicago
           image: linuxserver/tautulli:latest@sha256:1280f7c8930755e91b5ec1582de5e3ca8061c9af10074a79fe0fb51bc608336a
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           name: tautulli
           resources:
             limits:
