--- a/argocd/apps/recipes/deploy.yaml
+++ b/argocd/apps/recipes/deploy.yaml
@@ -38,7 +38,7 @@ spec:
             - secretRef:
                 name: recipes
           image: vabene1111/recipes
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           resources:
             requests:
               cpu: 250m
