--- a/argocd/apps/media-server/bazarr/deploy.yaml
+++ b/argocd/apps/media-server/bazarr/deploy.yaml
@@ -31,7 +31,7 @@ spec:
             - name: DOCKER_MODS
               value: wayller/bazarr-mod-subsync:latest
           image: linuxserver/bazarr:latest@sha256:88272d031e268a5d10035e2707fc095417dba9794a7a4a59b51f01e6f9b74f65
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           name: bazarr
           resources:
             limits:
