--- a/argocd/apps/media-server/ombi/deploy.yaml
+++ b/argocd/apps/media-server/ombi/deploy.yaml
@@ -35,7 +35,7 @@ spec:
             - name: TZ
               value: America/Chicago
           image: linuxserver/ombi:latest@sha256:ad0db39033a3de959810d32b89fb7dc12d79fb2da9a96612331ea8b79c8d8f7a
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           name: ombi
           resources:
             limits:
