--- a/argocd/apps/media-server/overseerr/deploy.yaml
+++ b/argocd/apps/media-server/overseerr/deploy.yaml
@@ -35,7 +35,7 @@ spec:
             - name: TZ
               value: America/Chicago
           image: lscr.io/linuxserver/overseerr:latest@sha256:27199845ef4d29206c942e60169b3cac574d22ffdc3e61902006a33b812f6644
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           name: overseerr
           resources:
             limits:
