--- a/argocd/apps/ytdl/deploy.yaml
+++ b/argocd/apps/ytdl/deploy.yaml
@@ -55,7 +55,7 @@ spec:
             - name: ytdl_use_local_db
               value: "false"
           image: tzahi12345/youtubedl-material:latest@sha256:2f943d584711cb07c3535b518939fabb2ab90fdd7452d9a9938cd05378468ed9
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           name: ytdl
           resources:
             limits:
