--- a/argocd/apps/infra/istio/resources/istio-gw.yaml
+++ b/argocd/apps/infra/istio/resources/istio-gw.yaml
@@ -1,26 +1,26 @@
-apiVersion: networking.istio.io/v1beta1
-kind: Gateway
-metadata:
-  name: kube-gateway
-spec:
-  selector:
-    istio: ingressgateway
-  servers:
-  - hosts:
-    - '*'
-    port:
-      name: http
-      number: 80
-      protocol: HTTP
-    # tls:
-    #   httpsRedirect: true
-  - port:
-      number: 443
-      name: https
-      protocol: HTTPS
-    tls:
-      mode: SIMPLE
-      credentialName: default-ingress-cert # must be the same as secret
-    hosts:
-    - '*'
+# apiVersion: networking.istio.io/v1beta1
+# kind: Gateway
+# metadata:
+#   name: kube-gateway
+# spec:
+#   selector:
+#     istio: ingressgateway
+#   servers:
+#   - hosts:
+#     - '*'
+#     port:
+#       name: http
+#       number: 80
+#       protocol: HTTP
+#     # tls:
+#     #   httpsRedirect: true
+#   - port:
+#       number: 443
+#       name: https
+#       protocol: HTTPS
+#     tls:
+#       mode: SIMPLE
+#       credentialName: default-ingress-cert # must be the same as secret
+#     hosts:
+#     - '*'
     
