--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -1,353 +1,353 @@
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: resume-vs
-spec:
-  hosts:
-    - resume.yanello.net
-  gateways:
-    - istio-system/kube-gateway
-  http:
-    - route:
-        - destination:
-            host: marcus-server.lan
-            port:
-              number: 3000
----
-apiVersion: networking.istio.io/v1alpha3
-kind: ServiceEntry
-metadata:
-  name: resume-se
-  namespace: istio-system
-spec:
-  hosts:
-    - marcus-server.lan
-  ports:
-    - number: 3000
-      name: http
-      protocol: HTTP
-  resolution: DNS
-  location: MESH_EXTERNAL
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: hass-vs
-spec:
-  hosts:
-    - homeassistant.yanello.net
-  gateways:
-    - istio-system/kube-gateway
-  http:
-    - route:
-        - destination:
-            host: homeassistant.lan
-            port:
-              number: 8123
----
-apiVersion: networking.istio.io/v1alpha3
-kind: ServiceEntry
-metadata:
-  name: homeassistant-se
-  namespace: istio-system
-spec:
-  hosts:
-    - homeassistant.lan
-  ports:
-    - number: 8123
-      name: http
-      protocol: HTTP
-  resolution: DNS
-  location: MESH_EXTERNAL
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: ntopng-vs
-spec:
-  hosts:
-    - ntopng.yanello.net
-  gateways:
-    - istio-system/kube-gateway
-  http:
-    - route:
-        - destination:
-            host: ntopng.local
-            port:
-              number: 30341
----
-apiVersion: networking.istio.io/v1alpha3
-kind: ServiceEntry
-metadata:
-  name: ntopng-se
-  namespace: istio-system
-spec:
-  hosts:
-    - ntopng.local
-  endpoints:
-    - address: 192.168.1.1
-  ports:
-    - number: 30341
-      name: http
-      protocol: HTTP
-  resolution: STATIC
-  location: MESH_EXTERNAL
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: plex-vs
-spec:
-  hosts:
-    - plex.yanello.net
-  gateways:
-    - istio-system/kube-gateway
-  http:
-    - route:
-        - destination:
-            host: marcus-server.lan
-            port:
-              number: 32400
----
-apiVersion: networking.istio.io/v1alpha3
-kind: ServiceEntry
-metadata:
-  name: plex-se
-  namespace: istio-system
-spec:
-  hosts:
-    - marcus-server.lan
-  ports:
-    - number: 32400
-      name: http
-      protocol: HTTP
-  resolution: DNS
-  location: MESH_EXTERNAL
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: nextcloud-vs
-spec:
-  hosts:
-    - nextcloud.yanello.net
-  gateways:
-    - istio-system/kube-gateway
-  http:
-    - route:
-        - destination:
-            host: marcus-server.lan
-            port:
-              number: 6987
----
-apiVersion: networking.istio.io/v1alpha3
-kind: ServiceEntry
-metadata:
-  name: nextcloud-se
-  namespace: istio-system
-spec:
-  hosts:
-    - marcus-server.lan
-  ports:
-    - number: 6987
-      name: http
-      protocol: HTTP
-  resolution: DNS
-  location: MESH_EXTERNAL
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: iotawatt-vs
-spec:
-  hosts:
-    - iota.yanello.net
-  gateways:
-    - istio-system/kube-gateway
-  http:
-    - route:
-        - destination:
-            host: iotawatt.lan
-            port:
-              number: 80
----
-apiVersion: networking.istio.io/v1alpha3
-kind: ServiceEntry
-metadata:
-  name: iotawatt-se
-  namespace: istio-system
-spec:
-  hosts:
-    - iotawatt.lan
-  endpoints:
-    - address: 192.168.1.41
-  ports:
-    - number: 80
-      name: http
-      protocol: HTTP
-  resolution: STATIC
-  location: MESH_EXTERNAL
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: minio-vs
-spec:
-  hosts:
-    - minio.yanello.net
-  gateways:
-    - istio-system/kube-gateway
-  http:
-    - route:
-        - destination:
-            host: marcus-server.lan
-            port:
-              number: 9000
----
-apiVersion: networking.istio.io/v1alpha3
-kind: ServiceEntry
-metadata:
-  name: minio-se
-  namespace: istio-system
-spec:
-  hosts:
-    - marcus-server.lan
-  ports:
-    - number: 9000
-      name: http
-      protocol: HTTP
-  resolution: DNS
-  location: MESH_EXTERNAL
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: agh-vs
-spec:
-  hosts:
-    - agh.yanello.net
-  gateways:
-    - istio-system/kube-gateway
-  http:
-    - route:
-        - destination:
-            host: agh.local
-            port:
-              number: 3000
----
-apiVersion: networking.istio.io/v1alpha3
-kind: ServiceEntry
-metadata:
-  name: agh-se
-  namespace: istio-system
-spec:
-  hosts:
-    - agh.local
-  endpoints:
-    - address: 192.168.3.1
-  ports:
-    - number: 3000
-      name: http
-      protocol: HTTP
-  resolution: STATIC
-  location: MESH_EXTERNAL
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: opn-vs
-spec:
-  hosts:
-    - opnsense.yanello.net
-  gateways:
-    - istio-system/kube-gateway
-  http:
-    - route:
-        - destination:
-            host: opn.local
-            port:
-              number: 1000
----
-apiVersion: networking.istio.io/v1alpha3
-kind: ServiceEntry
-metadata:
-  name: opn-se
-  namespace: istio-system
-spec:
-  hosts:
-    - opn.local
-  endpoints:
-    - address: 192.168.1.1
-  ports:
-    - number: 1000
-      name: http
-      protocol: HTTP
-  resolution: STATIC
-  location: MESH_EXTERNAL
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: pikvm-vs
-spec:
-  hosts:
-    - pikvm.yanello.net
-  gateways:
-    - istio-system/kube-gateway
-  http:
-    - route:
-        - destination:
-            host: pikvm.local
-            port:
-              number: 80
----
-apiVersion: networking.istio.io/v1alpha3
-kind: ServiceEntry
-metadata:
-  name: pikvm-se
-  namespace: istio-system
-spec:
-  hosts:
-    - pikvm.local
-  endpoints:
-    - address: 192.168.1.9
-  ports:
-    - number: 80
-      name: http
-      protocol: HTTP
-  resolution: STATIC
-  location: MESH_EXTERNAL
----
-apiVersion: networking.istio.io/v1alpha3
-kind: VirtualService
-metadata:
-  name: ubiquiti-vs
-spec:
-  hosts:
-    - ui.yanello.net
-  gateways:
-    - istio-system/kube-gateway
-  http:
-    - route:
-        - destination:
-            host: ubiquiti.local
-            port:
-              number: 8443
----
-apiVersion: networking.istio.io/v1alpha3
-kind: ServiceEntry
-metadata:
-  name: ubiquiti-se
-  namespace: istio-system
-spec:
-  hosts:
-    - ubiquiti.local
-  endpoints:
-    - address: 192.168.1.4
-  ports:
-    - number: 8080
-      name: http
-      protocol: HTTP
-  resolution: STATIC
-  location: MESH_EXTERNAL
----
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
+# metadata:
+#   name: resume-vs
+# spec:
+#   hosts:
+#     - resume.yanello.net
+#   gateways:
+#     - istio-system/kube-gateway
+#   http:
+#     - route:
+#         - destination:
+#             host: marcus-server.lan
+#             port:
+#               number: 3000
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: ServiceEntry
+# metadata:
+#   name: resume-se
+#   namespace: istio-system
+# spec:
+#   hosts:
+#     - marcus-server.lan
+#   ports:
+#     - number: 3000
+#       name: http
+#       protocol: HTTP
+#   resolution: DNS
+#   location: MESH_EXTERNAL
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
+# metadata:
+#   name: hass-vs
+# spec:
+#   hosts:
+#     - homeassistant.yanello.net
+#   gateways:
+#     - istio-system/kube-gateway
+#   http:
+#     - route:
+#         - destination:
+#             host: homeassistant.lan
+#             port:
+#               number: 8123
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: ServiceEntry
+# metadata:
+#   name: homeassistant-se
+#   namespace: istio-system
+# spec:
+#   hosts:
+#     - homeassistant.lan
+#   ports:
+#     - number: 8123
+#       name: http
+#       protocol: HTTP
+#   resolution: DNS
+#   location: MESH_EXTERNAL
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
+# metadata:
+#   name: ntopng-vs
+# spec:
+#   hosts:
+#     - ntopng.yanello.net
+#   gateways:
+#     - istio-system/kube-gateway
+#   http:
+#     - route:
+#         - destination:
+#             host: ntopng.local
+#             port:
+#               number: 30341
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: ServiceEntry
+# metadata:
+#   name: ntopng-se
+#   namespace: istio-system
+# spec:
+#   hosts:
+#     - ntopng.local
+#   endpoints:
+#     - address: 192.168.1.1
+#   ports:
+#     - number: 30341
+#       name: http
+#       protocol: HTTP
+#   resolution: STATIC
+#   location: MESH_EXTERNAL
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
+# metadata:
+#   name: plex-vs
+# spec:
+#   hosts:
+#     - plex.yanello.net
+#   gateways:
+#     - istio-system/kube-gateway
+#   http:
+#     - route:
+#         - destination:
+#             host: marcus-server.lan
+#             port:
+#               number: 32400
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: ServiceEntry
+# metadata:
+#   name: plex-se
+#   namespace: istio-system
+# spec:
+#   hosts:
+#     - marcus-server.lan
+#   ports:
+#     - number: 32400
+#       name: http
+#       protocol: HTTP
+#   resolution: DNS
+#   location: MESH_EXTERNAL
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
+# metadata:
+#   name: nextcloud-vs
+# spec:
+#   hosts:
+#     - nextcloud.yanello.net
+#   gateways:
+#     - istio-system/kube-gateway
+#   http:
+#     - route:
+#         - destination:
+#             host: marcus-server.lan
+#             port:
+#               number: 6987
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: ServiceEntry
+# metadata:
+#   name: nextcloud-se
+#   namespace: istio-system
+# spec:
+#   hosts:
+#     - marcus-server.lan
+#   ports:
+#     - number: 6987
+#       name: http
+#       protocol: HTTP
+#   resolution: DNS
+#   location: MESH_EXTERNAL
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
+# metadata:
+#   name: iotawatt-vs
+# spec:
+#   hosts:
+#     - iota.yanello.net
+#   gateways:
+#     - istio-system/kube-gateway
+#   http:
+#     - route:
+#         - destination:
+#             host: iotawatt.lan
+#             port:
+#               number: 80
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: ServiceEntry
+# metadata:
+#   name: iotawatt-se
+#   namespace: istio-system
+# spec:
+#   hosts:
+#     - iotawatt.lan
+#   endpoints:
+#     - address: 192.168.1.41
+#   ports:
+#     - number: 80
+#       name: http
+#       protocol: HTTP
+#   resolution: STATIC
+#   location: MESH_EXTERNAL
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
+# metadata:
+#   name: minio-vs
+# spec:
+#   hosts:
+#     - minio.yanello.net
+#   gateways:
+#     - istio-system/kube-gateway
+#   http:
+#     - route:
+#         - destination:
+#             host: marcus-server.lan
+#             port:
+#               number: 9000
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: ServiceEntry
+# metadata:
+#   name: minio-se
+#   namespace: istio-system
+# spec:
+#   hosts:
+#     - marcus-server.lan
+#   ports:
+#     - number: 9000
+#       name: http
+#       protocol: HTTP
+#   resolution: DNS
+#   location: MESH_EXTERNAL
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
+# metadata:
+#   name: agh-vs
+# spec:
+#   hosts:
+#     - agh.yanello.net
+#   gateways:
+#     - istio-system/kube-gateway
+#   http:
+#     - route:
+#         - destination:
+#             host: agh.local
+#             port:
+#               number: 3000
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: ServiceEntry
+# metadata:
+#   name: agh-se
+#   namespace: istio-system
+# spec:
+#   hosts:
+#     - agh.local
+#   endpoints:
+#     - address: 192.168.3.1
+#   ports:
+#     - number: 3000
+#       name: http
+#       protocol: HTTP
+#   resolution: STATIC
+#   location: MESH_EXTERNAL
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
+# metadata:
+#   name: opn-vs
+# spec:
+#   hosts:
+#     - opnsense.yanello.net
+#   gateways:
+#     - istio-system/kube-gateway
+#   http:
+#     - route:
+#         - destination:
+#             host: opn.local
+#             port:
+#               number: 1000
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: ServiceEntry
+# metadata:
+#   name: opn-se
+#   namespace: istio-system
+# spec:
+#   hosts:
+#     - opn.local
+#   endpoints:
+#     - address: 192.168.1.1
+#   ports:
+#     - number: 1000
+#       name: http
+#       protocol: HTTP
+#   resolution: STATIC
+#   location: MESH_EXTERNAL
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
+# metadata:
+#   name: pikvm-vs
+# spec:
+#   hosts:
+#     - pikvm.yanello.net
+#   gateways:
+#     - istio-system/kube-gateway
+#   http:
+#     - route:
+#         - destination:
+#             host: pikvm.local
+#             port:
+#               number: 80
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: ServiceEntry
+# metadata:
+#   name: pikvm-se
+#   namespace: istio-system
+# spec:
+#   hosts:
+#     - pikvm.local
+#   endpoints:
+#     - address: 192.168.1.9
+#   ports:
+#     - number: 80
+#       name: http
+#       protocol: HTTP
+#   resolution: STATIC
+#   location: MESH_EXTERNAL
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: VirtualService
+# metadata:
+#   name: ubiquiti-vs
+# spec:
+#   hosts:
+#     - ui.yanello.net
+#   gateways:
+#     - istio-system/kube-gateway
+#   http:
+#     - route:
+#         - destination:
+#             host: ubiquiti.local
+#             port:
+#               number: 8443
+# ---
+# apiVersion: networking.istio.io/v1alpha3
+# kind: ServiceEntry
+# metadata:
+#   name: ubiquiti-se
+#   namespace: istio-system
+# spec:
+#   hosts:
+#     - ubiquiti.local
+#   endpoints:
+#     - address: 192.168.1.4
+#   ports:
+#     - number: 8080
+#       name: http
+#       protocol: HTTP
+#   resolution: STATIC
+#   location: MESH_EXTERNAL
+# ---
