--- a/argocd/apps/infra/istio/app.yaml
+++ b/argocd/apps/infra/istio/app.yaml
@@ -66,8 +66,8 @@ spec:
     repoURL: https://istio-release.storage.googleapis.com/charts
     targetRevision: "1.24.3"
     chart: gateway
-    helm:
-      valuesObject:
+    # helm:
+    #   valuesObject:
         # affinity:
         #   nodeAffinity:
         #     preferredDuringSchedulingIgnoredDuringExecution:
