--- a/argocd/apps/infra/istio/app.yaml
+++ b/argocd/apps/infra/istio/app.yaml
@@ -20,6 +20,14 @@ spec:
     repoURL: https://istio-release.storage.googleapis.com/charts
     targetRevision: "1.24.3"
     chart: istiod
+    helm:
+      valuesObject:
+        global:
+          istioNamespace: istio-system
+        meshConfig:
+          ingressService: istio-gateway
+          ingressSelector: gateway
+        
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
