--- a/argocd/apps/infra/istio/app.yaml
+++ b/argocd/apps/infra/istio/app.yaml
@@ -1,3 +1,4 @@
+# need to be installed one at a time in order
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -52,29 +53,29 @@ spec:
           ingressService: istio-gateway
           ingressSelector: gateway
         
-# ---
-# apiVersion: argoproj.io/v1alpha1
-# kind: Application
-# metadata:
-#   name: istio-ingressgateway
-#   namespace: argocd
-#   finalizers:
-#     - resources-finalizer.argocd.argoproj.io
-# spec:
-#   destination:
-#     name: in-cluster
-#     namespace: istio-system
-#   project: default
-#   syncPolicy:
-#     automated:
-#       prune: true
-#       selfHeal: true
-#     syncOptions:
-#       - CreateNamespace=true
-#   source:
-#     repoURL: https://istio-release.storage.googleapis.com/charts
-#     targetRevision: "1.24.3"
-#     chart: gateway
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: istio-ingressgateway
+  namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
+spec:
+  destination:
+    name: in-cluster
+    namespace: istio-system
+  project: default
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
+  source:
+    repoURL: https://istio-release.storage.googleapis.com/charts
+    targetRevision: "1.24.3"
+    chart: gateway
     # helm:
     #   valuesObject:
         # affinity:
