--- a/argocd/apps/infra/istio/app.yaml
+++ b/argocd/apps/infra/istio/app.yaml
@@ -49,10 +49,12 @@ spec:
       valuesObject:
         global:
           istioNamespace: istio-system
+          logging:
+            level: "default:debug"
         meshConfig:
           ingressService: istio-gateway
           ingressSelector: gateway
-        
+
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -78,16 +80,16 @@ spec:
     chart: gateway
     # helm:
     #   valuesObject:
-        # affinity:
-        #   nodeAffinity:
-        #     preferredDuringSchedulingIgnoredDuringExecution:
-        #       - weight: 1
-        #         preference:
-        #           matchExpressions:
-        #             - key: kubernetes.io/hostname
-        #               operator: In
-        #               values:
-        #                 - marcus-server
+    # affinity:
+    #   nodeAffinity:
+    #     preferredDuringSchedulingIgnoredDuringExecution:
+    #       - weight: 1
+    #         preference:
+    #           matchExpressions:
+    #             - key: kubernetes.io/hostname
+    #               operator: In
+    #               values:
+    #                 - marcus-server
 # ---
 # apiVersion: argoproj.io/v1alpha1
 # kind: Application
@@ -112,4 +114,3 @@ spec:
 #     targetRevision: HEAD
 #     path: argocd/apps/infra/istio/resources
 # ---
-
