--- a/argocd/apps/media-server/qbittorrent/manifests/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/manifests/deploy.yaml
@@ -42,10 +42,10 @@ spec:
         resources:
           requests:
             memory: "4Gi"
-            cpu: "250m"
+            cpu: "1Gi"
           limits:
             memory: "6Gi"
-            cpu: "500m"
+            cpu: "2"
         ports:
           - name: qbit-webui
             containerPort: 8080
