--- a/argocd/apps/media-server/qbittorrent/manifests/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/manifests/deploy.yaml
@@ -40,7 +40,7 @@ spec:
         resources:
           requests:
             memory: "4Gi"
-            cpu: "1Gi"
+            cpu: "4"
           limits:
             memory: "6Gi"
             cpu: "2"
