--- a/argocd/apps/mealie/deploy.yaml
+++ b/argocd/apps/mealie/deploy.yaml
@@ -144,7 +144,7 @@ spec:
           cpu: 100m
           memory: 500Mi
       volumes:
-        - name: data
+        - name: pg_data
           hostPath:
             path: /k8s/mealie/pg_data
 
